--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_HOST_USER=ater7587@gmail.com
-EMAIL_HOST_PASSWORD=yydm kgfs yhjw rqvp
+EMAIL_HOST_USER=eventmanagerqwe@gmail.com
+EMAIL_HOST_PASSWORD=yuqq erms nixx pbhu
